--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     </style>
 </head>
 <body>
-    <button onclick="openPDF()">Touch Me</button>
+    <button onclick="openGDrive()">Touch Me</button>
 
     <script>
-        function openPDF() {
-            // Replace 'path/to/your.pdf' with the actual path to your PDF file
-            window.open('sample.pdf', '_blank');
+        function openGDrive() {
+            // Replace with your Google Drive link
+            const gdriveLink = 'https://drive.google.com/drive/folders/1Mujg84c0FaZ6WtAg7U-2NsTNz4JHr5zN?usp=sharing';
+            window.open(gdriveLink, '_blank');
         }
     </script>
 </body>
