--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <button onclick="openGDrive()">Touch Me</button>
 
     <script>
-        function openGDrive() {
-            // Replace with your Google Drive link
-            const gdriveLink = 'https://drive.google.com/drive/folders/1Mujg84c0FaZ6WtAg7U-2NsTNz4JHr5zN?usp=sharing';
-            window.open(gdriveLink, '_blank');
-        }
-    </script>
+    function openGDrive() {
+        const pdfLink = 'sample.pdf'; // same folder as HTML
+        window.open(pdfLink, '_blank');
+    }
+</script>
+
 </body>
 </html>
