--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <script>
     function openGDrive() {
-        const pdfLink = 'sample.pdf'; // same folder as HTML
+        const pdfLink = 'DS1505-P Fundamentals Deep Learning (Lab Integrated) Updated 09.8.25.pdf'; // same folder as HTML
         window.open(pdfLink, '_blank');
     }
 </script>
